# convert-pdf-markdown

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  especificaciones.md  pyproject.toml
docs/: architecture.md  conventions.md  mcp-config.md  verification.md
scripts/: convert_all.sh  convert_all_xlsx.sh  generar_informes_pdm.py  unificar_informes_pdm.py  verify_output.py
src/docx2md/: __init__.py
src/docx2md/application/: __init__.py
src/docx2md/config/: __init__.py  service_factory.py
src/docx2md/domain/: __init__.py  exceptions.py
src/docx2md/infrastructure/: __init__.py
src/docx2md/interface/: __init__.py
src/md2docx/: __init__.py
src/md2docx/application/: __init__.py
src/md2docx/config/: __init__.py  service_factory.py
src/md2docx/domain/: __init__.py  exceptions.py
src/md2docx/infrastructure/: __init__.py
src/md2docx/interface/: __init__.py
src/pdf2md/: __init__.py
src/pdf2md/application/: __init__.py
src/pdf2md/config/: __init__.py  config_loader.py  service_factory.py  toml_config_loader.py
src/pdf2md/domain/: __init__.py  exceptions.py
src/pdf2md/infrastructure/: __init__.py
src/pdf2md/interface/: __init__.py
src/xlsx2md/: __init__.py
src/xlsx2md/application/: __init__.py
src/xlsx2md/config/: __init__.py  service_factory.py
src/xlsx2md/domain/: __init__.py  exceptions.py
src/xlsx2md/infrastructure/: __init__.py
src/xlsx2md/interface/: __init__.py
tests/: conftest.py
tests/fixtures/: docx_generator.py  generate.py  xlsx_generator.py
tests/integration/: conftest.py  test_batch_docx.py  test_corrupted_pdf.py  test_e2e_pipeline.py  test_encrypted_pdf.py  test_images_pdf.py  test_links_pdf.py  test_multicolumn_pdf.py  test_pdf_improvements.py  test_real_docx.py  test_real_pdf.py  test_simple_pdf.py  test_tables_pdf.py
tests/unit/: __init__.py  test_config.py  test_reexports.py
tests/unit/docx2md/: test_config.py
tests/unit/domain/: test_content_block.py  test_emit_link_list.py  test_entities.py  test_exceptions.py  test_ports.py  test_use_cases.py  (+1 more)
(+186 files in other folders)
