[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Intelligent PDF to Markdown converter with Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "elegro", email = "elegro@example.com" },
]
keywords = ["pdf", "markdown", "converter", "books", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "Pillow>=10.3",
    "tabulate>=0.9",
    "pydantic>=2.7",
    "typer>=0.12",
    "loguru>=0.7",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
]
camelot = [
    "camelot-py[cv]>=0.11",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
mcp = [
    "fastmcp>=2.0",
]

[project.scripts]
pdf2md = "pdf2md.interface.cli.app:app"
pdf2md-mcp = "pdf2md.interface.mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf2md*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: mark test as an integration test (requires real PDF fixtures)",
]
